# MIT_6.5840

lab1/: Cargo.toml  build.rs
lab1/mapreduce/: Cargo.toml  build.rs
lab1/mapreduce/proto/: messages.proto
lab1/mapreduce/src/: lib.rs
lab1/mapreduce/src/coordinator/: coordinator.rs  mod.rs
lab1/mapreduce/src/unit/: mod.rs  unit_map.rs  unit_reduce.rs
lab1/mapreduce/src/worker/: map_worker.rs  mod.rs  reduce_worker.rs
lab1/proto/: fileinfo.proto  messages.proto
lab1/src/: coordinator_main.rs  worker_main.rs
lab1/src/coordinator/: coordinator.rs
lab1/src/server/: coordinator.rs  main.rs  main_coordinator.rs
lab1/src/worker/: main.rs  map_worker.rs  reduce_worker.rs  worker.rs
lab2/: Cargo.toml
lab2/kv/: Cargo.toml  build.rs
lab2/kv/proto/: storage.proto
lab2/kv/src/: client.rs  lib.rs  storage.rs
lab2/src/: lock.rs  storage.rs
lab3/: Cargo.toml
lab3/consensus/: Cargo.toml  build.rs
lab3/consensus/proto/: raft.proto
lab3/consensus/src/: lib.rs
lab3/src/: main.rs
