[package]
name = "lab1"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "coordinator"
path = "src/coordinator_main.rs"
[[bin]]
name = "worker"
path = "src/worker_main.rs"

[workspace]
members = ["mapreduce"]

[dependencies]
mapreduce = { path = "mapreduce" }
prost = "0.14.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.2"

[build-dependencies]
prost-build = "0.14.1"
