[package]
name = "lab1"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "coordinator"
path = "src/coordinator_main.rs"
[[bin]]
name = "worker"
path = "src/worker_main.rs"

[workspace]
members = ["mapreduce"]
resolver = "2"

[workspace.dependencies]
prost = "0.14.1"

[dependencies]
mapreduce = { path = "mapreduce" }
prost = "0.14.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[build-dependencies]
prost-build = "0.14.1"