[package]
name = "lab2"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["kv"]

[[bin]]
name = "storage"
path = "src/storage.rs"

[[bin]]
name = "lock"
path = "src/lock.rs"

[dependencies]
dashmap = "6.1.0"
eyre = "0.6.12"
kv = { path = "kv" }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
rand = { version = "0.9.2", features = ["os_rng", "small_rng"] }
