[package]
name = "mapreduce"
version = "0.1.0"
edition = "2024"
resolver = "2"


[dependencies]
bytes = "1.10.1"
dashmap = "6.1.0"
eyre = "0.6.12"
murmur3 = "0.5.2"
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
prost = "*"
tracing = "0.1.41"
tonic-prost = "0.14.2"


[build-dependencies]
tonic-prost-build = "*"

[dev-dependencies]
rand = "0.9.2"
