[package]
name = "kv"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
prost = "0.14.1"
prost-types = "0.14.1"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.41"

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
rand = { version = "0.9.2", features = ["small_rng", "os_rng"] }
